--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 
       <footer>
         <p>
-         
+         <a target="_blank" title="follow me on twitter" href="http://www.twitter.com/bradleyboehmke"><img alt="follow me on twitter" src="//login.create.net/images/icons/user/twitter_30x30.png" border=0></a>
         </p>
       </footer>
     </div>
