--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,8 @@
       <footer>
         <p>
          <a target="_blank" title="follow me on twitter" href="http://www.twitter.com/bradleyboehmke"><img alt="follow me on twitter" src="//login.create.net/images/icons/user/twitter_30x30.png" border=0></a>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="https://www.linkedin.com/pub/brad-boehmke-ph-d/7/a25/9b0" style="text-decoration:none;"><span style="font: 80% Arial,sans-serif; color:#0783B6;"><img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_in_20x15.png" width="20" height="15" alt="View Brad Boehmke, Ph.D.'s LinkedIn profile" style="vertical-align:middle;" border="0">&nbsp;</span></a>
         </p>
       </footer>
     </div>
