--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
         <p>
          <a target="_blank" title="follow me on twitter" href="http://www.twitter.com/bradleyboehmke"><img alt="follow me on twitter" src="//login.create.net/images/icons/user/twitter_30x30.png" border=0></a>
          &nbsp;
-         <a href="https://www.linkedin.com/pub/brad-boehmke-ph-d/7/a25/9b0" style="text-decoration:none;"><span style="font: 80% Arial,sans-serif; color:#0783B6;"><img src="linkedin_64.png" width="30" height="30" alt="View Brad Boehmke, Ph.D.'s LinkedIn profile" style="vertical-align:middle;" border="0">&nbsp;</span></a>
+         <a href="https://www.linkedin.com/pub/brad-boehmke-ph-d/7/a25/9b0"><img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_myprofile_160x33.png" width="160" height="30" border="0" alt="View Brad Boehmke, Ph.D.'s profile on LinkedIn"></a>
         </p>
       </footer>
     </div>
