--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     {% include head.html %}
-    <link href="/css/syntax.css" rel="stylesheet">
+    <link href="/css/_syntax.scss" rel="stylesheet">
   </head>
   <body>
     <div class="container azul">
