--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
          &nbsp;
          <a title="view my profile on linkedIn" href="https://www.linkedin.com/pub/jason-freels/87/703/a6b"><img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_myprofile_160x33.png" width="160" height="31" border="0" alt="View Jason Freels Profile on LinkedIn"></a>
          &nbsp:
-	<a title="fork me on github" href="https://github.com/Auburngrads"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b3/GitHub.svg/2000px-GitHub.svg.png" height="5%" border="0" alt="Fork Me on GitHub"></a>
+	<a title="fork me on github" href="https://github.com/Auburngrads"><img src="https://es.wikipedia.org/wiki/GitHub#/media/File:GitHub_logo_2013.svg" height="31px" border="0" alt="Fork Me on GitHub"></a>
 	 </p>
       </footer>
     </div>
