--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -1,6 +1,10 @@
 ---
 ---
 
+div.container.azul{
+  max-width: 940px;
+}
+
 @import 'syntax';
 
 $site-background-color: #f5f5f5;
@@ -37,6 +41,12 @@ hr,
 .fluid-width-video-wrapper,
 .highlight {
   margin-bottom: 20px;
+}
+
+h1 {
+text-align: center
+margin: 0 0 0 0; 
+
 }
 
 blockquote {
@@ -199,6 +209,7 @@ footer {
 .single {
   font-size: 1.125rem;
   line-height: 28px;
+  font-family: 'serif';
 }
 
 .single time {
