--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,9 +21,9 @@
         <p>
          <a target="_blank" title="follow me on twitter" href="http://www.twitter.com/JasonFreels1"><img alt="follow me on twitter" src="//login.create.net/images/icons/user/twitter_30x30.png" border=0></a>
          &nbsp;
-         <a title="view my profile on linkedIn" href="https://www.linkedin.com/pub/jason-freels/87/703/a6b"><img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_myprofile_160x33.png" width="160" height="31" border="0" alt="View Jason Freels Profile on LinkedIn"></a>
+         <a target="_blank" title="view my profile on linkedIn" href="https://www.linkedin.com/pub/jason-freels/87/703/a6b"><img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_myprofile_160x33.png" width="160" height="31" border="0" alt="View Jason Freels Profile on LinkedIn"></a>
          &nbsp;
-	<a title="fork me on github" href="https://github.com/Auburngrads"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/29/GitHub_logo_2013.svg/600px-GitHub_logo_2013.svg.png" style='height: 31px; border: 0;' alt="Fork Me on GitHub"></a>
+	<a target="_blank" title="fork me on github" href="https://github.com/Auburngrads"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/29/GitHub_logo_2013.svg/600px-GitHub_logo_2013.svg.png" style='height: 31px; border: 0;' alt="Fork Me on GitHub"></a>
 	
 	 </p>
       </footer>
