--- a/cv/cv.css
+++ b/cv/cv.css
@@ -2,3 +2,6 @@
   
   font-family: 'serif';
 }
+  azul { a { color: $azul-accent-color; font-size: 16pt; text-transform: none;
+    &:hover { color: darken($azul-accent-color, 20%);
+}}}
