--- a/courses/courses.css
+++ b/courses/courses.css
@@ -8,9 +8,9 @@
 }
 
 hr {
-  display: block;
-  width: 80%;
-  border: solid 2px black;
-  padding: 10px 0 10px 0;
+  width: 100%;
+  border: solid 1px gray;
+  margin: 40px 0 40px 0;
+  background: none;
   
 }
