--- a/cv/cv.css
+++ b/cv/cv.css
@@ -15,6 +15,10 @@
 h1 {
   text-transform: uppercase;
   margin: 50px 0 50px 0;
+  border: solid thin black;
+  border-radius: 40px;
+  background-color: black;
+  color: #f5f5f5;
 }
 
 h2 {
