--- a/cv/cv.css
+++ b/cv/cv.css
@@ -15,6 +15,7 @@
 h1 {
   text-transform: uppercase;
   margin: 50px 0 50px 0;
+  padding: 20px 0 20px 0;
   border: solid thin black;
   border-radius: 40px;
   background-color: black;
